# CudaMLP

./: .gitignore  CMakeLists.txt  README.md  main.cu
source/: cpumatrix.cuh  cudamatrix.cuh  main.cu  main_cuda_optm.cu  mlp.cuh  mlp_cuda_optm.cuh  random.cuh  unit_test.cu
source/mlp/: cpu_matrix.cuh  gpu_matrix.cuh  matrix.cuh  mlp.cuh  random.cuh
